--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>A History of Browsers</h1>
+<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald|Open+Sans">
 <h2>Table of Contents</h2>
 <ul>
   <li><a href="#Intro">Introduction</a></li>
