--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
   <title>A History of Browsers</title>
 </head>
 <body>
-<h1>A History of Browsers</h1>
-<link rel="stylesheet" href="style.css"/>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald|Open+Sans">
 
-<div id="navbar">
-  <ul>
-    <li><a href="#Intro">Introduction</a></li>
-    <li><a href="#IE">Internet Explorer</a></li>
-    <li><a href="#FF">FireFox</a></li>
-    <li><a href="#Chrome">Chrome</a></li>
-  </ul>
+<div class="ui container">
+<h1 style = "color: #4183c4">A History of Browsers</h1>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+<link rel="stylesheet" href="style.css"/>
+
+
+  <div class ="ui fixed top inverted four item menu" id="navbar">
+    <a class="item" href="#Intro">Introduction</a>
+    <a class="item" href="#IE">Internet Explorer</a>
+    <a class="item" href="#FF">FireFox</a>
+    <a class="item" href="#Chrome">Chrome</a>
 </div>
 
 <h2><a name="Intro">Introduction</a></h2>
@@ -30,9 +33,12 @@
   products, and tried to gain an edge by product differentiation, leading to the acceptance of the Cascading Style
   Sheets proposed by Hakon Wium Lie over Netscape's JavaScript Style Sheets (JSSS) by W3C.</p>
 
-<div class="left"><h2><a name="IE">A Brief History of IE</a></h2>
+  <div class="ui equal width grid">
 
-  <img src="http://upload.wikimedia.org/wikipedia/en/1/10/Internet_Explorer_7_Logo.png" width="100px"/>
+    <div class="ui column">
+<h2><a name="IE">A Brief History of IE</a></h2>
+
+  <img class="ui floated left image" src="http://upload.wikimedia.org/wikipedia/en/1/10/Internet_Explorer_7_Logo.png" width="100px"/>
 
   <p>The first Internet Explorer was derived from Spyglass Mosaic. The original Mosaic came from <a
       href="http://www.ncsa.illinois.edu/">NCSA</a>, but since NCSA was
@@ -48,11 +54,13 @@
     better support for web standards than previous versions, with plans for improved support for RSS, CSS, and Ajax, as
     well as full compliance for Cascading Style Sheets 2.1. It was also the first version to successfully pass the Acid2
     test. In addition, Internet Explorer 8 included new features such as WebSlices and an improved phishing filter.</p>
-</div>
+    </div>
 
-<div class="right"><h2><a name="FF">A Brief History of FireFox</a></h2>
+    <div class="ui column">
 
-  <img src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png" width="100px"/>
+<h2><a name="FF">A Brief History of FireFox</a></h2>
+
+  <img class="ui floated left image" src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png" width="100px"/>
 
   <p>The project which became <a href="https://www.mozilla.org/en-US/firefox/">Firefox</a> started as an experimental
     branch of the Mozilla Suite called m/b (or
@@ -64,11 +72,13 @@
     dropping support for the blink HTML element as well as text-decoration:blink CSS element, the restriction to have to
     "switch to a different search provider across the entire browser," and a global browser console, a new network
     monitor
-    among other things.</p></div>
+    among other things.</p>
+    </div>
 
-<div class="center"><h2><a name="Chrome">A Brief History of Chrome</a></h2>
+    <div class="ui column">
+<h2><a name="Chrome">A Brief History of Chrome</a></h2>
 
-  <img src="http://upload.wikimedia.org/wikipedia/commons/e/e2/Google_Chrome_icon_%282011%29.svg" width="100px"/>
+  <img class="ui floated left image" src="http://upload.wikimedia.org/wikipedia/commons/e/e2/Google_Chrome_icon_%282011%29.svg" width="100px"/>
 
   <p>Google's <a href="https://www.forbes.com/profile/eric-schmidt/#4d802db4138e">Eric Schmidt</a> opposed the
     development of an independent web browser for six years. He stated that "at the
@@ -82,7 +92,11 @@
     Chrome MSI package. For business use it is helpful to have full-fledged MSI packages that can be customized via
     transform files (.mst) - but the MSI provided with Chrome is only a very limited MSI wrapper fitted around the
     normal
-    installer, and many businesses find that this arrangement does not meet their needs.</p></div>
+    installer, and many businesses find that this arrangement does not meet their needs.</p>
+    </div>
+</body>
 
+</div>
+</div>
 </body>
 </html>
